RESOLVED FIXED74759
Subpixel antialiasing not working in tiled mode
https://bugs.webkit.org/show_bug.cgi?id=74759
Summary Subpixel antialiasing not working in tiled mode
Anders Carlsson
Reported 2011-12-16 15:20:55 PST
Subpixel antialiasing not working in tiled mode
Attachments
Patch (1.61 KB, patch)
2011-12-16 15:22 PST, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2011-12-16 15:22:42 PST
Anders Carlsson
Comment 2 2011-12-16 15:26:40 PST
Note You need to log in before you can comment on or make changes to this bug.