Subpixel antialiasing not working in tiled mode https://bugs.webkit.org/show_bug.cgi?id=74759

Reviewed by Simon Fraser.

Call setContentsOpaque(true) on the main frame render view layer so subpixel aa will be used
when drawing text into that layer.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::createPrimaryGraphicsLayer):

git-svn-id: svn://svn.chromium.org/blink/trunk@103117 bbb929c8-8fbe-4397-9dbb-9b2b20218538